<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_gravity="center" android:background="@drawable/float_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:gravity="center" android:id="@id/camcheck_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/camera_orientation_adjust_prompt" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_centerHorizontal="true" />
    <ImageButton android:id="@id/button_rotate_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/screen_rot_left" android:layout_below="@id/camcheck_text" android:layout_alignLeft="@id/camcheck_text" android:contentDescription="@string/desc_camera_rot_left" />
    <Button android:id="@id/button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="10.0dip" android:text="@string/camera_orientation_ok" android:layout_alignBottom="@id/button_rotate_left" android:layout_centerHorizontal="true" />
    <ImageButton android:id="@id/button_rotate_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/screen_rot_right" android:layout_below="@id/camcheck_text" android:layout_alignRight="@id/camcheck_text" android:contentDescription="@string/desc_camera_rot_right" />
</RelativeLayout>