<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="right" android:id="@id/label_from" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/feedback_email_label_from" android:layout_alignBaseline="@id/text_email" android:layout_alignParentLeft="true" />
    <EditText android:id="@id/text_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_toRightOf="@id/label_from" android:layout_alignParentRight="true" android:inputType="textEmailAddress">
        <requestFocus />
    </EditText>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="right" android:id="@id/label_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_email_label_to" android:layout_toLeftOf="@id/text_to" android:layout_alignBaseline="@id/text_to" android:layout_alignParentLeft="true" />
    <EditText android:id="@id/text_to" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_feedback_email" android:ems="10" android:layout_below="@id/text_email" android:layout_alignLeft="@id/text_email" android:layout_alignParentRight="true" android:inputType="textNoSuggestions" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/label_comments" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_comments_label" android:layout_below="@id/text_to" android:layout_alignParentLeft="true" />
    <EditText android:gravity="top|left|center" android:id="@id/text_comments" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_above="@id/button_send" android:layout_below="@id/label_comments" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:inputType="textMultiLine" />
    <Button android:gravity="center" android:layout_gravity="center" android:id="@id/button_send" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send" android:layout_alignParentBottom="true" />
</RelativeLayout>