<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/welcome_overlay" android:background="@*android:color/transparent" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/bubble_world_icon" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <TextView android:textAppearance="@style/Tutorial.Text.Body.DemoExplanation" android:gravity="center" android:id="@id/demo_explanation" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/demo_explanation" />
        <Button android:id="@id/start_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" style="@style/Tutorial.StartButton" />
    </LinearLayout>
    <View android:id="@id/dummy_center_view" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" />
    <TextView android:textAppearance="@style/Tutorial.Text.Bubble" android:gravity="center_horizontal" android:id="@id/bubble_world_icon" android:background="@drawable/callout_lighterblue_tall_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="28.0dip" android:text="@string/welcome_2_callout_lang" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <TextView android:textAppearance="@style/Tutorial.Text.Bubble" android:gravity="center_horizontal" android:id="@id/bubble_dict" android:background="@drawable/callout_lighterblue_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:text="@string/welcome_2_bubble_dict" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <TextView android:textAppearance="@style/Tutorial.Text.Bubble" android:gravity="center_horizontal" android:id="@id/bubble_playpause" android:background="@drawable/callout_lighterblue_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-24.0dip" android:text="@string/welcome_2_bubble_pause" android:layout_toLeftOf="@id/dummy_center_view" android:layout_alignParentBottom="true" />
    <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>